padding fixes on mobile

--- a/css/pase.css
+++ b/css/pase.css
@@ -287,7 +287,7 @@ a:focus {
     background: url(../img/starry.jpg) no-repeat bottom center scroll;
 }
 
-.content-section {
+.content-about-section {
     width: 100%;
     padding-top: 50px;
 }
@@ -304,8 +304,9 @@ a:focus {
         padding-top: 100px;
     }
 
-    .content-section {
+    .content-about-section {
         width: 100%;
+        padding-top: 20px;
     }
 
 }
